[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "welch-allyn-bp100-client"
version = "2026.3.0"
dependencies = ["bleak"]
requires-python = ">=3.14"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
wa = "bp100.cli:run"

#[tool.setuptools.packages.find]
#where = ["bp100"]

[tool.setuptools]
packages = ["bp100"]
